<resources>
    <string name="app_name">Droid Cafe</string>
    <string name="enter_name_hint">Enter your name</string>
    <string name="name_label_text">Name</string>
    <string name="address_label_text">Address</string>
    <string name="enter_address_hint">Enter your address</string>
    <string name="phone_label_text">Phone</string>
    <string name="enter_phone_hint">Enter your phone number</string>
    <string name="same_day_messenger_service">Same day messenger service</string>
    <string name="next_day_ground_delivery">Next day ground delivery</string>
    <string name="pick_up">Pick up</string>
    <string-array name="labels_array">
        <item>Home</item>
        <item>Work</item>
        <item>Mobile</item>
        <item>Other</item>
    </string-array>
</resources>